# wrongdoings

./: .gitignore  donotREADME.md
.old/: gh-download.sh  gh-init.sh  ma2_1.py  ma2_2.py  ma2_3a.py  ma2_3b.py  ma2_4.py  ma5_python.py
asm-explore/: empty-fun  empty-fun.c  hello
asm-explore/chapter5/eatsyscall/: eatsyscall
bashsc/: sc00.sh  sc01.sh  sc02.sh  sc03.sh
c-execs/CH15/: EX15  EX2-ch15.cpp  EX2-chapter15.cpp  EX3is2-ch15  EX4-ch15  EX5-ch15  EX5-ch15.cpp  EX6-ch15.cpp
c-execs/CH16/PRAC/: IFs.cpp  LLOGICAL  LLOGICAL.cpp
c-execs/CH16/THRY/: constants.cpp  statements  statements.cpp
c-execs/CH19/PRAC/: EX1  EX3  EX3.cpp  EX4.cpp  EX5
c-execs/CH19/THRY/: constref  func-over
c-execs/PREch15/: arrays  ops  point.cpp  stdi  strings.cpp  t1  types
c-lang/: C-to-F.c  a.out  equality.c  hr-to-min.c  hrs-to-mins.c  index.html  inout.c  leap-yr.c  rev-array.c
c-lang/http-server/: example-server.c  http-server  http-server.c  index.html
c-lang/pi/project/: CMakeLists.txt  CMakeLists.txt.bad  why.c
c-lang/progs-gen/: a.out  bin2decimal.c  payload.c  pointer.c  volume-sphere.c
cpp-lang/: pointer-arithmetic.cpp
cpp-lang/CH15/: EX-chapter15.cpp  EX2-ch15  EX4-ch15.cpp  EX6-ch15  EX7-ch15  EX7-ch15.cpp
cpp-lang/PREch15/: arrays.cpp  ops.cpp  point  stdi.cpp  strings  t1.cpp  types.cpp
crypto/: base64-py3.py  base64_enc.py  caesar-1.py  caesar-brute.py  dec-2  hex2-3.py  xor-brute.py  xor-res  xor1.py  xor2.py
crypto/encoded/: dec-1  python3  sample-txt
python2/: back-cache-poison.py  cache-poison.py  socket-client.py  socket-serv.py  tested.py
(+116 files in other folders)
